# launch-operations-system

./: .gitignore  Makefile  README.md
client/: .env.development  .env.sample  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/: EventLog.tsx  LivePlayer.tsx  RealTimeChart.tsx  VesselTelemetry.tsx  WeatherInfo.tsx
client/src/context/: WebSocketContext.tsx
client/src/hooks/: useWebSocket.ts
live_server/: .gitignore  README.md  index.js  package-lock.json  package.json  server.js
server/: Makefile  README.md  main.py  pyproject.toml  requirements.txt
server/kr/: delta_v.py  get_atmospheric_pressure_at_altitude.py  k.py  ksp_react.py  lift_off.py  organize_parts.py  orvital.py  rocket_pitch_adjust.py  rocket_status_monitor.py
server/matplotlib/: 3d_plot_01.py  orbit.py  plot2.py
server/src/: config.py  main.py  model.py  rocket_schema.json
server/src/api/flights/: router.py  schema.py
server/src/event_records/: event_record_plans.json
server/src/flight_records/: 111.json  flight_record_plans.json  sample_record.json
server/src/models/: model.py
server/src/routers/: http_router.py  web_socket_router.py
server/src/settings/: config.py  database.py  router.py
server/src/utils/: websocket_handler.py
server/src/utils/commons/: log_manager.py  read_json.py  read_log_file.py  websocket_handler.py
server/src/utils/decorators/: round_output.py
server/src/utils/krpc_module/: auto_pilot_manager.py  base_rocket.py  event_manager.py  flight_dynamics.py  flight_manager.py  krpc_client.py  ksp_react.py  mechjeb.py  part_unit.py  record_manager.py  rocket_base.py  rocket_core.py  rocket_event.py  rocket_pitch_program.py  rocket_stage.py  rocket_status_manager.py  rocket_status_monitor.py  rocket_telemetry.py  rocket_unit.py  telemetry_manager.py  vessel_manager.py
(+60 files in other folders)
